--- a/src/components/Main/index.module.css
+++ b/src/components/Main/index.module.css
@@ -2,4 +2,12 @@
   height: 100%;
   width: 100%;
   position: absolute;
+  touch-action: none;
+}
+
+.canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  object-fit: contain;
 }
